tests/ui/invalid_intern_arg.stderr
error[E0435]: attempt to use a non-constant value in a constant
   --> tests/ui/invalid_intern_arg.rs:5:53
    |
  5 |     Python::attach(|py| py.import(pyo3::intern!(py, _foo)).unwrap());
    |                                                     ^^^^ non-constant value
    |
help: consider using `let` instead of `static`
   --> src/sync.rs:232:9
    |
232 -         static INTERNED: $crate::sync::Interned = $crate::sync::Interned::new($text);
232 +         let INTERNED: $crate::sync::Interned = $crate::sync::Interned::new($text);
    |

error: lifetime may not live long enough
 --> tests/ui/invalid_intern_arg.rs:5:25
  |
5 |     Python::attach(|py| py.import(pyo3::intern!(py, _foo)).unwrap());
  |                     --- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
  |                     | |
  |                     | return type of closure is pyo3::Bound<'2, PyModule>
  |                     has type `Python<'1>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0435`.
